--- a/src/$v2$/overlays/window/window.scss
+++ b/src/$v2$/overlays/window/window.scss
@@ -68,6 +68,12 @@
         }
 
         /* */
+        & {
+            direction: ltr !important;
+            writing-mode: horizontal-tb !important;
+        }
+
+        /* */
         & :where(*)
         {
             user-select: none;
